# hyperV

./: .gitignore  CRUSH.md  Cargo.toml  ENHANCEMENTS.md  README.md  crash_test.sh  examples.sh  hyperv.yaml  long_running.sh  startup.yaml  test_enhanced.sh  test_logs.sh  test_script.sh  test_service.sh
.crush/: crush.db  crush.db-shm  crush.db-wal
src/: alerts.rs  cli.rs  compose.rs  config.rs  error.rs  lib.rs  logs.rs  main.rs  manager.rs  process.rs  task.rs
tests/: alerts_tests.rs  cli_tests.rs  crasher.sh  logger.sh  logs_tests.rs  manager_tests.rs  stop_task.rs  surreal.sh  worker.sh
