[package]
name = "hyperV"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
# Keep Tokio lean: we only use the async runtime, macros, time, select!, and ctrl_c().
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "signal"] }
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = { version = "0.30" }
fs2 = "0.4"
flate2 = "1.0"
ureq = "2.12"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
